# SL_Compiler

./: .clang-format  CMakeLists.txt  README.md  input.sl  lexer  lexerf.c  lexerf.h  main.c
Scripts/: build_and_run.sh
include/: keywords.h  lexerf2.h  string_view.h  token.h  types.h
src/: lexerf.c  lexerf2.c  main.c  main2.c  string_view.c  token.c
